[WIP] restructuration des dossiers et placement de l'application

--- a/frontend/my-app/src/app/app.component.html
+++ b/frontend/my-app/src/app/app.component.html
@@ -1,13 +1,5 @@
 <main>
-  <header class="brand-name">
-    <img
-      src="/assets/logo.svg"
-      alt="logo"
-      class="brand-logo"
-      aria-hidden="true"
-      (click)="navigateToHome()"
-    />
-  </header>
+  <app-header></app-header>
   <section class="content">
     <router-outlet></router-outlet>
   </section>
