--- a/frontend/my-app/src/app/app.component.html
+++ b/frontend/my-app/src/app/app.component.html
@@ -1,6 +1,1 @@
-<main>
-  <app-header></app-header>
-  <section class="content">
-    <router-outlet></router-outlet>
-  </section>
-</main>
+<app-main></app-main>
