--- a/frontend/my-app/src/app/core/layout/main/main.component.html
+++ b/frontend/my-app/src/app/core/layout/main/main.component.html
@@ -1,1 +1,7 @@
-<p>main works!</p>
+<app-header></app-header>
+<main>
+  <section class="content">
+    <router-outlet></router-outlet>
+  </section>
+</main>
+<app-footer></app-footer>
