Mise à jour des fichiers CSS et HTML du composant footer & déplacement de housing-location

--- a/frontend/my-app/src/app/core/layout/footer/footer.component.html
+++ b/frontend/my-app/src/app/core/layout/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>footer works!</p>
+<footer>
+  <ul class="list">
+    <li class="item"><a href="https://github.com/TonyLaPoche">Github</a></li>
+    <li class="item"><a href="https://github.com/TonyLaPoche">LinkedIn</a></li>
+    <li class="item"><a href="https://github.com/TonyLaPoche">Portfolio</a></li>
+  </ul>
+  <p class="copyright">&copy; 2024 Terrade Antoine</p>
+</footer>
