Mise à jour du style CSS du composant details

--- a/frontend/my-app/src/app/views/public/details/details.component.css
+++ b/frontend/my-app/src/app/views/public/details/details.component.css
@@ -66,6 +66,12 @@ input {
   border-left: none;
   border-bottom: solid 0.3px;
 }
+
+.error {
+  margin-bottom: 0.5rem;
+  color: lightcoral;
+}
+
 @media (max-width: 1024px) {
   .listing-photo {
     width: 100%;
