--- a/frontend/my-app/src/app/core/layout/header/header.component.css
+++ b/frontend/my-app/src/app/core/layout/header/header.component.css
@@ -1,6 +1,9 @@
+:host {
+  box-shadow: 0px 5px 25px var(--shadow-color);
+}
+
 header {
   display: block;
   height: 60px;
   padding: var(--content-padding);
-  box-shadow: 0px 5px 25px var(--shadow-color);
 }
